frontend/deploy/kustomize/components/webapp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinner-done-better-webapp-deployment
  labels:
    app: dinner-done-better-webapp
spec:
  selector:
    matchLabels:
      app: dinner-done-better-webapp
      app.kubernetes.io/name: dinner-done-better-webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: dinner-done-better-webapp
        app.kubernetes.io/name: dinner-done-better-webapp
    spec:
      containers:
      - name: dinner-done-better-webapp
        image: dinner-done-better-webapp
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
          name: http
        resources:
          requests:
            memory: 256Mi
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: "/api/_meta_/live"
            port: 9000
          initialDelaySeconds: 15
          periodSeconds: 32
        readinessProbe:
          httpGet:
            path: "/api/_meta_/ready"
            port: 9000
          initialDelaySeconds: 15
          periodSeconds: 3
---
