frontend/deploy/kustomize/components/webapp/webapp_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinner-done-better-webapp-deployment
  labels:
    app: dinner-done-better-webapp
spec:
  selector:
    matchLabels:
      app: dinner-done-better-webapp
      app.kubernetes.io/name: dinner-done-better-webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: dinner-done-better-webapp
        app.kubernetes.io/name: dinner-done-better-webapp
    spec:
      containers:
        - name: dinner-done-better-webapp
          image: dinner-done-better-webapp
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
          volumeMounts:
            - name: "config"
              mountPath: "/app/apps/web/config.json"
              subPath: "config.json"
          livenessProbe:
            httpGet:
              path: "/api/_ops_/live"
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 52
          readinessProbe:
            httpGet:
              path: "/api/_ops_/ready"
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        # this volume contains the configuration file for the API service
        - name: "config"
          configMap:
            name: "frontend-service-config"
---
