frontend/deploy/kustomize/components/webapp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dinner-done-better-webapp-srv
  labels:
    app.kubernetes.io/name: dinner-done-better-webapp
spec:
  selector:
    app.kubernetes.io/name: dinner-done-better-webapp
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: http
  type: ClusterIP
---
